[tool.poetry]
name = "gitpoke"
version = "0.1.0"
description = "Text user interface (TUI) for git."
authors = ["pokepetter <pokepetter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich-demo = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
