[project]
name = "gitpoke"
version = "0.1.0"
description = "Text user interface (TUI) for git."
authors = [
    {name = "Petter Amland", email = "pokepetter@gmail.com"}
]
keywords = ["git", "TUI"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.1",
]

[project.urls]
Homepage = "https://github.com/pokepetter/gitpoke"

[tool.setuptools]
py-modules = ["gitpoke"]